themes/documentation/css/main.css
/* ... */
  ::-webkit-input-placeholder {
    color: inherit;
    opacity: .54;
  }

  ::-webkit-file-upload-button {
    -webkit-appearance: button;
    font: inherit;
  }

/* 2. Body, fonts and typography */
  /* # Body */
  body,
  html {
    height: 100%;
  }

  body {
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    color: #222;
    background-color: #fafafa;
    line-height: 1.5;

    -webkit-font-feature-settings: "kern"1, "kern";
    -moz-font-feature-settings: "kern"1, "kern";
    font-feature-settings: "kern"1, "kern";
    -webkit-font-kerning: normal;
    font-kerning: normal;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  /* # Fonts */
  @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');

  @font-face {
    font-family: 'FontAwesome';
    font-style: normal;
    font-weight: 900;
    font-display: auto;
    src: url("../webfonts/fa-solid-900.eot");
    src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), 
        url("../webfonts/fa-solid-900.woff2") format("woff2"), 
        url("../webfonts/fa-solid-900.woff") format("woff"), 
        url("../webfonts/fa-solid-900.ttf") format("truetype"), 
        url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); 
  }

  /* # Icons */
  a.category::before {
      transition: all 0.2s linear;
      font-family: FontAwesome;
      font-size: 55px;
      line-height: 55px;
      display: block;
      color: #d9d9d9;
      margin-bottom: 15px;
      content: "\f013";
  }

  a#category-49::before {
      content: "\f03d";
  }

  a#category-8::before {
      content: "\f019";
  }

  a#category-15::before {
      content: "\f03a";
  }

  a#category-18::before {
      content: "\f024";
  }

  a#category-16::before {
      content: "\f0d0";
  }

  a#category-54::before {
      content: "\f013";
  }

  a#category-55::before {
      content: "\f021";
  }

  a#category-51::before {
      content: "\f290";
  }

  a#category-9::before {
      content: "\f1e6";
  }

  a#category-56::before {
      content: "\f188";
  }

  a#category-50::before {
      content: "\f1cd";
  }

/* 3. Tags settings */
  /* # Headings */
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
      color: #222222;
      font-weight: 400;
      line-height: 1.3;
  }

  h1 {
      margin: 0 30px .5em 0;
      font-size: 1.75rem;
  }

  h2 {
      font-size: 1.5rem;
  }

  h3 {
      font-size: 1.3rem;
  }

  h4 {
      font-size: 1.25rem;
  }

  h5 {
      font-size: 1.2rem;
  }

  h6 {
      font-size: 1.15rem;
  }

  /* # Lists */
  ul:not(.Nav):not(.Pager), ol:not(.Nav):not(.Pager) {
    border-left: 4px solid #f2f2f2;    
  }

  ul {
    margin: 0;
    list-style: none;
  }

  ul li,
  ol li {
    position: relative;
    display: block;
  }

  ul:not(.Nav):not(.Pager) li::before,
  ol:not(.Nav):not(.Pager) li::before {
    content: '';
    display: list-item;    
    position: absolute;
  }

  ul:not(.Nav):not(.Pager) li::before {
    list-style-type: disc;
    color: #bfbfbf;  
  }

  ol:not(.Nav):not(.Pager) li::before {
    list-style-type: decimal;
    color: #000;
    font-weight: 600;
    left: -5px;
  }

  /* # Links */
  a:focus {
      text-decoration: none;
      outline: none;
  }

  a {
      transition: all 0.2s linear;
      text-decoration: none;
  }

  a.Link--external:after {
     content: " "url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAVklEQVR4Xn3PgQkAMQhDUXfqTu7kTtkpd5RA8AInfArtQ2iRXFWT2QedAfttj2FsPIOE1eCOlEuoWWjgzYaB/IkeGOrxXhqB+uA9Bfcm0lAZuh+YIeAD+cAqSz4kCMUAAAAASUVORK5CYII=);
  }

  /* # Other tags */
  p {
      margin: 0 0 1em;
  }

  hr {
      clear: both;
      margin: 1em 0;
      border-top: 2px solid #e2e2e2;
      border-bottom: 1px solid #fff;
      border-left: 0;
      border-right: 0;

  }

  q {
    border: 0;
    text-align: center;
    padding: 75px 10px 65px 10px;
    margin-top: 60px;
    margin-bottom: 30px;
  }

  strong {
      color: #222;
  }

/* 4. General settings */
  /* # Navbar and navigation */
  .Button {
      display: inline-block;
      text-align: center;
      vertical-align: middle;
      -ms-touch-action: manipulation;
      touch-action: manipulation;
      cursor: pointer;
      background-image: none;
      border: 1px solid transparent;
      white-space: nowrap;
      border-radius: 4px;
  }

  .Brand,
  .Navbar {
      background-color: #d64444;
  }

  .Brand {
      display: block;
      padding: .75em .6em;
      font-size: 1.25rem;
      text-shadow: none;
      font-weight: 700;
      text-transform: uppercase;
      color: #fff;
  }

  .Navbar {
      position: relative;
      margin-bottom: 0;
      box-shadow: 0 1px 5px rgba(0, 0, 0, .25);
      z-index: 1;
  }

  .Navbar .Container {
    display: flex;
    justify-content: center;
  }

  .Navbar .Brand {
      text-transform: uppercase;
      font-size: 1.5rem;
  }

  .CodeToggler {
      padding: 0 20px;
  }

  .Nav,
  .Page__header h1 {
      margin: 0;
      padding: 0;
  }

  .Collapsible__content .Nav {
      margin-left: 20px;
  }

  .Nav__arrow {
      display: inline-block;
      position: relative;
      width: 16px;
      margin-left: 10px;
      font-size: 16px;
      order: 1;
  }

  .Nav__arrow:before {
      position: absolute;
      display: block;
      content: "";
      margin: -.25em 0 0 -.4em;
      left: 50%;
      top: 50%;
      width: .45em;
      height: .45em;
      border-right: .15em solid #C6C6C6;
      border-top: .15em solid #C6C6C6;
      -webkit-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
      transform: rotate(45deg);
      transition-duration: .3s;
  }

  .Nav__item,
  .Nav__item a {
      display: block;
  }

  .Nav__item a {
      display: flex;
      align-items: center;
      margin: 0;
      padding: 6px 15px 6px 0;
      font-weight: 700;
      text-shadow: none;
      text-transform: uppercase;
  }
/* ... */

